# chatregex

./: .gitignore  PromptProcessor.py  README.md  main.py  nlp.py  pyproject.toml
src/chatregex/: prompt_processor.py
src/chatregex/books/: a_study_in_scarlet.txt  the_secret_adversary.txt  the_sign_of_four.txt
src/chatregex/pipeline/: __init__.py  chapter_reader.py  pipeline.py  preprocessor.py  text_parser.py
tests/: __init__.py  conftest.py  test_chapter_reader.py  test_pipeline.py  test_preprocessor.py  test_text_parser.py
text/: a_study_in_scarlet.txt
