[tool.poetry]
name = "chatregex"
version = "0.1.0"
description = ""
authors = ["bfinlayson-hbu <bfinlayson@hbu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
